--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>
+      ポケカル(ポケモン
+      スカーレット・バイオレット対応ダメージ計算+育成論投稿ツール)
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
