Fix:headタグのダブルコーテーションが誤っていたのを修正 #7

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head prefix=”og: http://ogp.me/ns#”>
+  <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,9 +13,15 @@
     <!-- OGP用の設定 -->
     <meta property="og:url" content="https://poke-calculator.vercel.app/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="ポケカルキュレーター(ポケモン
-    スカーレット・バイオレット対応ダメージ計算+育成論投稿ツール)" />
-    <meta property="og:description" content="ポケモンのダメージ計算ツールと育成論投稿ツールが一つになったWebアプリです。投稿された育成論データを計算機に呼び出してそのまま計算に利用できます。" />
+    <meta
+      property="og:title"
+      content="ポケカルキュレーター(ポケモン
+    スカーレット・バイオレット対応ダメージ計算+育成論投稿ツール)"
+    />
+    <meta
+      property="og:description"
+      content="ポケモンのダメージ計算ツールと育成論投稿ツールが一つになったWebアプリです。投稿された育成論データを計算機に呼び出してそのまま計算に利用できます。"
+    />
     <meta property="og:site_name" content="ポケカルキュレーター" />
     <meta property="og:image" content="%PUBLIC_URL%/OGPthumbnail.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_transparent.png" />
