--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
     />
     <meta property="og:site_name" content="ポケカルキュレーター" />
     <meta property="og:image" content="%PUBLIC_URL%/OGPthumbnail.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_transparent.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
