Fix:OGP画像のパスを実際のパスに変更 #7

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,15 @@
     <meta property="og:site_name" content="ポケカルキュレーター" />
     <meta property="og:image" content="%PUBLIC_URL%/OGPthumbnail.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/OGPthumbnail.png" />
+    <meta
+      name="twitter:image"
+      content="https://poke-calculator.vercel.app/OGPthumbnail.png"
+    />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_transparent.png" />
+    <link
+      rel="apple-touch-icon"
+      href="https://poke-calculator.vercel.app/logo_transparent.png"
+    />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
